syntax = "proto3";

package rpc;

service UserService {
  rpc UpdateUser (UpdateUserRequest) returns (UpdateUserResponse);
  rpc CreateUser (CreateUserRequest) returns (CreateUserResponse);
}

message UpdateUserRequest {
  int32 id = 1;
  string name = 2;
  int32 age = 3;
}

message UpdateUserResponse {
  bool success = 1;
  string message = 2;
}

message CreateUserRequest {
    string name = 1;
    int32 age = 2;
  }
  
  message CreateUserResponse {
    bool success = 1;
    string message = 2;
    int32 id = 3;
  }
